// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline 1`] = `
Object {
  "Constructor": "dummy",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "content": "content from options",
    "title": "title from options",
    "types": Array [],
  },
  "html": "
<main>
  <div>title from options</div>
  <div>content from options</div>
</main>
",
}
`;

exports[`inline 2`] = `
Object {
  "Constructor": "dummy",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "content": "new content",
    "title": "new title",
    "types": Array [],
  },
  "html": "
<main>
  <div>new title</div>
  <div>new content</div>
</main>
",
}
`;

exports[`sfc 1`] = `
Object {
  "Constructor": "_class2",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "content": "content from sfc options",
    "title": "title from sfc options",
    "types": Array [],
  },
  "html": "
<div>title from sfc options</div>
<div>content from sfc options</div>
",
}
`;

exports[`sfc 2`] = `
Object {
  "Constructor": "_class2",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "content": "new sfc content",
    "title": "new sfc title",
    "types": Array [],
  },
  "html": "
<div>new sfc title</div>
<div>new sfc content</div>
",
}
`;
